--- a/style.css
+++ b/style.css
@@ -46,3 +46,86 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/* start */
+
+html { 
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.wrapper{
+  width: 96.4%;
+  margin: 0 auto;
+}
+
+.icon::before {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+
+a { text-decoration: none; }
+
+/* navigation */
+
+header { position: relative; }
+
+.header-content{ 
+  display: flex;
+  align-items: center;
+  position: relative;
+ }
+
+nav {
+  width: 44.6%;
+  margin-left: 23%;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-list li {  text-align: center; }
+
+.nav-list a {
+  font-size: 0.8em;
+  /* color: #5fb0dd; */
+  color:#aeb5b8;
+  text-transform: uppercase;
+}
+
+.nav-list li::after { 
+  content: "/";
+  padding:0 1em;
+  color:#aeb5b8;
+}
+
+.nav-list li:last-child::after { content: none; }
+
+.header-content > a::before {
+  content: "\f002";
+  position: absolute;
+  top: 35%;
+  right: 0;
+  color:#aeb5b8;
+  font-family: "Font Awesome 5 Free";
+  font-size: x-large;
+  font-weight: 900;
+    
+}
+
+.hamburger::before{
+  content: "\f0c9";
+  display: none;
+  position: absolute;
+  top: 35%;
+  right: 5%;
+  color:#aeb5b8;
+  font-family: "Font Awesome 5 Free";
+  font-size: x-large;
+  font-weight: 900;
+}
