--- a/style.css
+++ b/style.css
@@ -49,10 +49,9 @@ table {
 
 /* start */
 
-html { 
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-}
+* { box-sizing: border-box; }
+
+html { font-family: Arial, Helvetica, sans-serif; }
 
 .wrapper{
   width: 96.4%;
@@ -68,6 +67,22 @@ html {
 }
 
 a { text-decoration: none; }
+
+h2 {
+  width: 80%;
+  color:#ffffff;
+  text-transform: uppercase;
+  font-size: 3.5em;
+  font-weight: 900;
+  text-align: center;
+}
+
+p { 
+  font-size: 0.8em;
+  color: #ffffff;
+  line-height: 2em;
+  align-items: center;
+}
 
 /* navigation */
 
@@ -128,4 +143,31 @@ nav {
   font-family: "Font Awesome 5 Free";
   font-size: x-large;
   font-weight: 900;
+}
+
+/* section banner */
+.banner {
+  margin-bottom: 15%;
+  position: relative;
+  display: flex;
+}
+
+
+.banner-heading {
+  width:39%;
+  padding: 8% 0%;
+  background-color: #6cb3dd;
+  transform: translate(20%,15%); 
+}
+
+.banner-para {
+  width:50%;
+  padding: 8%;
+  background-color:#5fb0dd;
+  transform: translate(1%,28%); 
+  text-align: center;
+}
+
+.banner-para p {
+  margin: 5%;
 }
