--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ table {
 
 * { box-sizing: border-box; }
 
-html { font-family: Arial, Helvetica, sans-serif; }
+html { font-family:  sans-serif; }
 
 .wrapper{
   width: 96.4%;
@@ -73,19 +73,20 @@ a {
  }
 
 h2 {
-  width: 80%;
+  width: 75%;
+  padding-left: 5% ;
   color:#ffffff;
   text-transform: uppercase;
-  font-size: 3.5em;
+  font-size: 3em;
   font-weight: 900;
   text-align: center;
 }
 
 h3 {
-  padding: 5% 0;
+  padding: 9%;
   color: #ffffff;
   text-transform: uppercase;
-  font-size: 2em;
+  font-size: 1.6em;
   font-weight: 900;
 }
 
@@ -117,7 +118,7 @@ h5 {
 }
 
 p { 
-  font-size: 0.9em;
+  font-size: 0.72em;
   color: #ffffff;
   line-height: 2em;
   align-items: center;
@@ -133,9 +134,14 @@ header { position: relative; }
   position: relative;
  }
 
+ .header-content img{
+   width: 100%;
+   
+ }
+
 nav {
   width: 44.6%;
-  margin-left: 23%;
+  margin-left: 20.5%;
 }
 
 .nav-list {
@@ -143,18 +149,18 @@ nav {
   justify-content: space-between;
 }
 
-.nav-list li {  text-align: center; }
+.nav-list li {  text-align: center;}
 
 .nav-list a {
-  font-size: 0.8em;
+  font-size: 0.7em;
+  padding: 0 1em;
   /* color: #5fb0dd; */
-  color:#aeb5b8;
+  color: #aeb5b8;
   text-transform: uppercase;
 }
 
-.nav-list li::after { 
+.nav-list li::after {
   content: "/";
-  padding:0 1em;
   color:#aeb5b8;
 }
 
@@ -186,40 +192,42 @@ nav {
 
 /* section banner */
 .banner {
-  margin-bottom: 15%;
-  position: relative;
+  margin-bottom: 17.5% ;
   display: flex;
 }
 
 
 .banner-heading {
-  width:39%;
-  padding: 8% 0%;
+  width:40%;
+  padding: 9% 0%;
+  position: relative;
   background-color: #6cb3dd;
-  transform: translate(20%,15%); 
+  transform: translate(17%,16%); 
 }
 
 .banner-para {
-  width:50%;
-  padding: 8%;
+  width:53.5%;
+  padding: 7%;
+  position: absolute;
   background-color:#5fb0dd;
-  transform: translate(1%,28%); 
+  transform: translate(69.5%,-67.5%); 
   text-align: center;
 }
 
-.banner-para p { margin: 5%; }
+.banner-para p { margin: 6%; }
 
 /* section world-ocean */
-.world-ocean{ display: flex; }
+.world-ocean{ background-color: #6cb3dd;}
+
+.world-wrapper {  display: flex;  }
 
 .world-ocean-content {
   width: 50%;
   position: relative;
-  background-color: #6cb3dd;
   text-align: center;
 }
 
-.world-ocean-content p { padding: 10%; }
+.world-ocean-content p { padding: 0 10%; }
 
 .world-ocean-content > a { 
   margin: 5%;
