--- a/style.css
+++ b/style.css
@@ -67,9 +67,10 @@ html { font-family:  sans-serif; }
 }
 
 a { 
-  text-decoration: none;
   color: #000000;
   text-transform: uppercase;
+  text-decoration: none;
+  font-size: 0.8em;
  }
 
 h2 {
@@ -93,20 +94,21 @@ h3 {
 h4 {
   padding: 5% 0;
   position: relative;
-  color: #d3d3d3;
+  color: #918b8b;
   text-transform: uppercase;
   text-align: center;
-  font-size: 1.8em;
+  font-size: 1.5em;
   font-weight: 900;
+  letter-spacing: 0.2em;
 }
 
 h4::after{
   content: "";
-  width: 5%;
+  width: 6%;
   margin: 1.5em;
-  padding-bottom: 5px;
+  padding-bottom: 4px;
   position: absolute;
-  left: 45%;
+  left: 43%;
   background-color: #5fb0dd;
 }
 
@@ -114,6 +116,12 @@ h5 {
   padding: 5% 0;
   text-transform: uppercase;
   font-size: 1.6em;
+  font-weight: 900;
+}
+
+h6 {
+  text-transform: uppercase;
+  font-size: 1.3em;
   font-weight: 900;
 }
 
@@ -228,7 +236,7 @@ nav {
 
 .world-ocean-content p { 
   padding:0 10%;
-  
+  padding-bottom: 4%;
 }
 
 .world-ocean-content > a { 
@@ -236,7 +244,6 @@ nav {
   padding: 1.5em 2.5em;
   display: inline-block;
   background: #ffffff;
-  font-size: 0.8em;
 }
 
 .world-ocean-content > a:hover {
@@ -299,7 +306,7 @@ nav {
 
 /* section featured */
 
-.featured { margin: 5% 10%; }
+.featured { margin: 3% 10%; }
 
 .featured-container {
   display: flex;
@@ -307,21 +314,50 @@ nav {
 
 .featured-container p{
   color: black;
-  font-size: 0.9em;
 }
 
-.featured-list {
+.featured-scroller {
   width: 40%;
+  height: 70vh;
+  overflow: hidden;
+  position: relative;
+  overflow-y: scroll;
+}
+
+.featured-scroller::-webkit-scrollbar-thumb{
+  width: 12em;
+  height: 70vh;
+
+} 
+
+
+.featured-list {
+  width: 100%;
+  height: 120vh;
+  padding: 0 3%;
+  position: absolute;
+  border-left: 1px solid  #808080 ;
   text-align: center;
 }
 
-.featured-list li{
-  padding: 5%;
+
+
+.featured-list > li{
+  margin: 5%;
+  padding: 5% 5%;
+  border: 1px solid  #808080;
+}
+
+.featured-list > li::before{
+  content: "";
+  width: 2em;
+  border-radius: 50%;
+  background-color: rgb(82, 17, 17);
 }
 
 .featured-list p { 
   color: black;
-  font-size: 0.9em;
+  font-size: 0.75em;
   text-transform: none;
 }
 
@@ -330,18 +366,27 @@ nav {
   margin: 5%;
   padding: 2% 5%;
   background: #aedad1;
-  position: relative;
+
 }
 
 .featured-content h5 > span {
+  font-size: 0.6em;
   color: #a9a9a9;
   float: right;
-  font-size: 0.8em;
-}
+  }
 
 .featured-content li > div {
-  width: 70%;
+  width: 55%;
+  margin: 10% 0;
   border: 1px solid #739b73;
+  display: inline-block;
+}
+
+.notepad-content p {
+  width: 80%;
+  display: inline-block;
+  text-transform: capitalize;
+  font-size: 0.75em;
 }
 
 .notepad::before{
@@ -349,17 +394,16 @@ nav {
   padding: 0.3em;
   background: #739b73;
   font-family: "Font Awesome 5 Free";
-  font-size: x-large;
-  font-weight: 900;
+  font-size: large;
+  font-weight: 400;
 }
 
 .featured-button{
+  margin: 10% 5%;
   padding: 1em 1em;
-  position: absolute;
-  right: 8%;
-  bottom: 8%;
+  display: inline-block;
   background-color: #fff;
-
 }
 
 .featured-content2 { display: none; }
+
